# rust-dependencies

./: Cargo.toml  README.md
dependencies-core/: Cargo.toml
examples/: indroduction_to_environment.rs  introduction_to_service.rs  mock_date_time.rs  mock_struct.rs  reqwest.rs
