[package]
name = "rust-dependencies"
version = "0.1.0"
edition = "2024"
authors = ["Codefonsi <info@codefonsi.com>"]
license = "MPL-2.0"
description = "A rust dependency management library inspired by SwiftUI's environment."
repository = "https://github.com/codefonsi/rust-dependencies"
homepage = "https://github.com/codefonsi/rust-dependencies"
documentation = "https://docs.rs/rust-dependencies"
keywords = ["keypaths", "EnumKeyPath", "type-safe", "WritableKeyPath", "ReadableKeyPath"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[dependencies]
serde_json = "1.0.143"


[workspace]
resolver = "3" # or "3"
members = [
    "dependencies-core"
]

[patch.crates-io]
#dependencies-core = { path = "dependencies-core" }


[features]
default = []

[dev-dependencies]
serde = "1.0.219"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"]}